[project]
name = "progtrack"
version = "0.1.5"
description = "Track @progress comments across source code files"
readme = "README.md"
license = {text = "MIT"}
dependencies = ["tabulate"]

[project.urls]
"Source" = "https://github.com/shao-wang-me/progtrack"

[project.scripts]
progtrack = "progtrack.cli:main"